# signal-bot

./: .env.example  .gitignore  Dockerfile  README.md  TODO.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  signal-bridge.Dockerfile
.github/workflows/: checks.yml  ci.yml  release.yml
deploy/: README.md  release.sh  update.sh
docs/superpowers/plans/: 2026-06-12-command-system.md
docs/superpowers/specs/: 2026-06-12-command-system-design.md  2026-06-15-extensible-tools-and-features-design.md  2026-06-16-bot-fixes-and-powers-design.md
prompts/: identity.md
src/signal_chatbot/: __init__.py  __main__.py  bot.py  botname.py  config.py  lobotomy.py  logging.py  timefmt.py
src/signal_chatbot/commands/: __init__.py  farewell.py  parser.py  replies.py  router.py
src/signal_chatbot/history/: __init__.py  store.py
src/signal_chatbot/llm/: __init__.py  control.py  conversation.py  deepseek.py  parsing.py  prompt.py  (+1 more)
tests/: test_authoring_tools.py  test_bot.py  test_command_parser.py  test_command_replies.py  test_command_router.py  test_config.py  test_conversation.py  test_deepseek.py  test_default_tools.py  test_disclaimer_strip.py  test_farewell.py  test_history_store.py  test_models.py  test_new_tools.py  test_profile_store.py  test_profiles_tool.py  test_prompt.py  test_set_name_tool.py  test_state_store.py  test_timefmt.py  test_tools.py  test_transport_client.py  test_websearch_client.py  test_websearch_tool.py  test_wikipedia_article.py  test_wikipedia_cache.py  test_wikipedia_client.py  test_wikipedia_service.py  test_wikipedia_tools.py
(+34 files in other folders)
