[project]
name = "signal-chatbot"
version = "0.1.0"
description = "A DeepSeek-powered Signal group chatbot triggered by an @bot mention."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.55",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "httpx>=0.27",
    "websockets>=13",
    "aiosqlite>=0.20",
    "structlog>=24.4",
]

[project.scripts]
signal-chatbot = "signal_chatbot.__main__:main"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/signal_chatbot"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "SIM"]
